# LoopTrainerCpp

Apps/: CMakeLists.txt
Apps/AudioAppTemplate/Source/: MainComponent.cpp
Apps/LoopTrainer/: CMakeLists.txt
Apps/LoopTrainer/Source/: CommonHeader.h  FIleNavigator.cpp  FileNavigator.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h  Toolbar.cpp  Toolbar.h
